// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing component menu row loading state 1`] = `
<View
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 50,
    }
  }
  testID="base"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexBasis": "70%",
          "flexDirection": "row",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "flex": 1,
              "fontSize": 16,
            },
            Object {
              "color": "rgb(18, 18, 18)",
            },
          ]
        }
      >
        test
      </Text>
    </View>
  </View>
</View>
`;

exports[`Testing component menu row on press event 1`] = `
<View
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 50,
    }
  }
  testID="base"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexBasis": "70%",
          "flexDirection": "row",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "flex": 1,
              "fontSize": 16,
            },
            Object {
              "color": "rgb(18, 18, 18)",
            },
          ]
        }
      >
        test
      </Text>
    </View>
  </View>
</View>
`;

exports[`Testing component menu row with title and content 1`] = `
<View
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 50,
    }
  }
  testID="base"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexBasis": "70%",
          "flexDirection": "row",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "flex": 1,
              "fontSize": 16,
            },
            Object {
              "color": "rgb(18, 18, 18)",
            },
          ]
        }
      >
        test title
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexBasis": "30%",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 16,
            },
            Object {
              "color": "rgb(135, 135, 135)",
              "opacity": 1,
            },
          ]
        }
      >
        test content
      </Text>
    </View>
  </View>
</View>
`;

exports[`Testing component menu row with title only 1`] = `
<View
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 50,
    }
  }
  testID="base"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexBasis": "70%",
          "flexDirection": "row",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "flex": 1,
              "fontSize": 16,
            },
            Object {
              "color": "rgb(18, 18, 18)",
            },
          ]
        }
      >
        test title
      </Text>
    </View>
  </View>
</View>
`;
